# qr_code_generator

./: .gitignore  DEPLOY.md  README.md  app.py  cli.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
core/: qr_engine.py  qr_hidden.py
helpers/: image.py  logo.py
qr_code_generator/: README.md  qr_code_generator.py
qr_code_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: run_hidden_example.sh  test_qr_generator.py
