[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-code-generator"
version = "0.1.0"
description = "Turn images into QR codes"
requires-python = ">=3.8"
dependencies = ["qrcode[pil]", "click>=8.1", "Flask>=3.0"]

[project.scripts]
qr = "cli:main"

[tool.setuptools.packages.find]
include = ["core*", "helpers*"]

[tool.setuptools.package-data]
core = ["py.typed"]
helpers = ["py.typed"]
